[package]
name = "sion"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_yaml = "0.8"
requests = "0.0.30"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "tera_templates"]